# domains

./: .gitignore  README.md  main.cpp  meson.build
.github/workflows/: linux.yml  linuxNoSVG.yml  linuxNoSvg.yml
examples/: allElements.tr  nesting.tr
include/: analysis.h  analyze.h  ast.h  cfg.h  eval.h  lexer.h  parser.h  render.h  utils.h
include/dataflow/: domain.h  interval_domain.h  sign_domain.h  solver.h  transfer.h  vec2_domain.h
include/dataflow/analyses/: interval_analysis.h  reachable_operations_analysis.h  sign_analysis.h
include/dataflow/domains/: domain.h  interval_domain.h  powerset_domain.h  sign_domain.h  vec2_domain.h
src/: analysis.cpp  analyze.cpp  ast.cpp  cfg.cpp  eval.cpp  lexer.cpp  parser.cpp  render.cpp  utils.cpp  version.cpp.in
src/dataflow/: interval_analysis.cpp  reachable_operations_analysis.cpp  sign_analysis.cpp
test/: cfg.cpp  eval.cpp  lexer.cpp  main.cpp  parser.cpp
test/dataflow/: analysis_test_support.h  domains.cpp  interval_analysis.cpp  reachable_op_analysis.cpp  sign_analysis.cpp
test/options/: analyze.out  analyze.tr  annotate.out  annotate.tr  cfg-dump.out  cfg-dump.tr  exec.out  exec.tr  multiple_annotate.out  multiple_annotate.tr  multiple_exec.out  multiple_exec.tr  reverse-cfg-dump.out  reverse-cfg-dump.tr
unittest/: cfg.cpp  eval.cpp  lexer.cpp  parser.cpp
unittest/dataflow/: analysis_test_support.h  domains.cpp  interval_analysis.cpp  reachable_op_analysis.cpp  sign_analysis.cpp
utils/ide/trlang/: package.json  trlang.vsix
utils/ide/trlang/syntaxes/: tr.tmLanguage.json
